<resources>
    <string name="app_name">Отказ от вредных привычек</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Отказ от вредных привычек</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello! It is our sample project</string>

    <string name="Smoking">Курение</string>
    <string name="Alcohol">Алкоголь</string>

    <string name="StartCountDown">Начать отсчёт</string>
    <string name="OnNotification">Включить оповещания</string>
    <string name="OffNotification">Выключить оповещания</string>

    <string name="Advice1">Курить - здоровью вредить!</string>

    <string name="falures">Срывы</string>
    <string name="longestPeriod">Самый длинный интервал</string>
    <string name="shortestPeriod">Самый короткий интервал</string>
    <string name="days">Дней без</string>
    <string name="start">Начало отказа</string>
    <string name="statistics">Статистика</string>
    <string name="default_notification_channel_id">myChannel</string>
</resources>